[gd_scene load_steps=8 format=3 uid="uid://6q0rr4ru0lei"]

[ext_resource type="Script" path="res://Scripts/jeu.gd" id="1_4aqij"]
[ext_resource type="PackedScene" uid="uid://cgxn8omlio83c" path="res://Characters_scenes/tomate_main.tscn" id="1_pcqhc"]
[ext_resource type="PackedScene" uid="uid://b6gahloa0mpyp" path="res://Characters_scenes/encadrereponse.tscn" id="3_cyuip"]
[ext_resource type="FontFile" uid="uid://ccc0h1c2gf6g5" path="res://Sprites/Super Larky.ttf" id="4_31f2j"]
[ext_resource type="Texture2D" uid="uid://urf0kgwou8c5" path="res://Sprites/bareInputBas.png" id="4_s535v"]

[sub_resource type="Curve2D" id="Curve2D_vlyku"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -102, -140, 0, 0, 0, 0, 1248, -148, 0, 0, 0, 0, 1234, 694, 0, 0, 0, 0, -98, 686, 0, 0, 0, 0, -102, -140)
}
point_count = 5

[sub_resource type="CircleShape2D" id="CircleShape2D_vw2a3"]
radius = 854.4

[node name="Jeu" type="Node2D"]
script = ExtResource("1_4aqij")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -242.0
offset_top = -127.0
offset_right = 1384.0
offset_bottom = 816.0
color = Color(0.472543, 0.872699, 1, 1)

[node name="TomateMain" parent="." instance=ExtResource("1_pcqhc")]
unique_name_in_owner = true
position = Vector2(577, 307)

[node name="Camera2D" type="Camera2D" parent="TomateMain"]

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_vlyku")

[node name="CheminSpawn" type="PathFollow2D" parent="Path2D"]
unique_name_in_owner = true
position = Vector2(-102, -140)
rotation = -0.00592586

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="EncadreReponse" parent="." instance=ExtResource("3_cyuip")]
unique_name_in_owner = true
offset_left = 444.0
offset_top = 35.0
offset_right = 709.0
offset_bottom = 72.0

[node name="ZoneDeTir" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="Portee" type="CollisionShape2D" parent="ZoneDeTir"]
position = Vector2(577, 307)
shape = SubResource("CircleShape2D_vw2a3")
debug_color = Color(0.238033, 0.603754, 0.571407, 0.42)

[node name="Score" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 934.0
offset_top = 28.0
offset_right = 1115.0
offset_bottom = 96.0
theme_override_colors/font_color = Color(0.768627, 0.0392157, 0.2, 1)
theme_override_fonts/font = ExtResource("4_31f2j")
theme_override_font_sizes/font_size = 24
text = "la la"

[node name="BareInputBas" type="Sprite2D" parent="Score"]
position = Vector2(88.6891, 46)
scale = Vector2(0.840336, 0.840336)
texture = ExtResource("4_s535v")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
